# ai_optimizer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
build_ai_optimizer-Debug/: Makefile  buildtests.sh  cmake_install.cmake
build_ai_optimizer-Debug/include/: Makefile  cmake_install.cmake
build_ai_optimizer-Debug/include/eigen/: CTestTestfile.cmake  Makefile  cdashtesting.cmake  cmake_install.cmake
build_ai_optimizer-Debug/include/eigen/Eigen/: Makefile  cmake_install.cmake
build_ai_optimizer-Debug/include/eigen/doc/: Makefile  cmake_install.cmake
build_ai_optimizer-Debug/include/eigen/doc/examples/: Makefile  cmake_install.cmake
build_ai_optimizer-Debug/include/eigen/doc/special_examples/: Makefile  cmake_install.cmake
cmake_macro/: CMakeLists.txt
example/: new_nn.cpp  old_nn.cpp
include/: CMakeLists.txt  CmakeLists.txt  CmakeLists.txt.demo
include/cpp_httplib_src/: httplib.h
include/eigen_src/: CMakeLists.txt  eigen.h
include/nlohman_src/: CMakeLists.txt  nlohman.h  nlohmann.h
include/spdlog_src/: CMakeLists.txt  spdlog.h
src/: main.cpp
src/composite_nn/: ActivationFunction.cpp  ActivationFunction.h  Layer.cpp  Layer.h  LossFunction.cpp  LossFunction.h  Network.cpp  Network.h  NetworkController.cpp  NetworkController.h  Weights.cpp  Weights.h  definitions.h
src/dto/: NetParamsDto.cpp  dtos.h
src/example/: new_nn.cpp  old_nn.cpp
src/http/: AlgorithmRestTemplate.cpp  AlgorithmRestTemplate.h  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h
src/nn/: NeuralNetwork.cpp  NeuralNetwork.h
src/nn_service/: nn_service.cpp  nn_service.h
src/utils/: serialization.h
